# openatc-source

./: .gitignore  CMakeLists.txt  Cargo.toml  GenerateVersionHeader.cmake  README.md  build_arm.sh  params.json  rules_arm-linux-gnueabihf_4.7.txt
3d_part/RapidjsonHelper/: CMakeLists.txt  RapidjsonHelper.cpp  RapidjsonHelper.h
3d_part/cjson/: CMakeLists.txt  cJSON.cpp  cJSON.h
3d_part/libintl-lite/: CMakeLists.txt  LibIntlConfig.cmake.in  libintl.h
3d_part/libintl-lite/internal/: MessageCatalog.hpp  Util.hpp  libintl.cpp
3d_part/rapidjson/rapidjson/: document.h  pointer.h  prettywriter.h  reader.h  schema.h  writer.h
3d_part/tinyxml/: CMakeLists.txt
Include/: CanBusManager.h  Common.h  OneWayQueue.h  OpenATC20999ParamStructDefine.h  OpenATCFaultProcManager.h  OpenATCFlowProcDefine.h  OpenATCHardwareManager.h  OpenATCLog.h  OpenATCMainCtlManager.h  OpenATCMd5.h  OpenATCMd5ConstDefine.h  OpenATCOperationLogBase.h  OpenATCOperationRecord.h  OpenATCOperationRecordBase.h  OpenATCParamCheck.h  OpenATCParamConstDefine.h  OpenATCParamStructDefine.h  OpenATCParameter.h  OpenATCRunStatus.h  OpenATCRunStatusDefine.h  PackUnpackBase.h  getopt.h  i18n_utils.h  mxcfb.h  version.h.in
OpenATCManager/: CMakeLists.txt  OpenATCComCtlManager.cpp  OpenATCComCtlManager.h  OpenATCFlowProcLog.cpp  OpenATCFlowProcLog.h  OpenATCFlowProcManager.cpp  OpenATCFlowProcManager.h  OpenATCLogicCtlManager.cpp  OpenATCLogicCtlManager.h  OpenATCManager.cpp  OpenATCOperationRecord.cpp
OpenATCManager/OpenATCManager/: ConfigPort.xml  LocalConfig.xml  LocalConfig_en.xml
OpenATCManager/comctl/: CMakeLists.txt  OpenATCCameraDataPackUnpack.cpp  OpenATCCameraDataPackUnpack.h  OpenATCCenterCommHandlerBase.h  OpenATCCenterCommHandlerSimpleFactory.cpp  OpenATCCenterCommHandlerSimpleFactory.h  OpenATCCfgCommHelper.cpp  OpenATCCfgCommHelper.h  OpenATCComDef.h  OpenATCComWithControlCenterImpl.cpp  OpenATCComWithControlCenterImpl.h  OpenATCCommWithCameraListenThread.cpp  OpenATCCommWithCameraListenThread.h  OpenATCCommWithCameraThread.cpp  OpenATCCommWithCameraThread.h  OpenATCCommWithCenterThread.cpp  OpenATCCommWithCenterThread.h  OpenATCCommWithCfgSWThread.cpp  OpenATCCommWithCfgSWThread.h  OpenATCCommWithGB20999Thread.cpp  OpenATCCommWithGB20999Thread.h  OpenATCCommWithITS300Thread.cpp  OpenATCCommWithITS300Thread.h  OpenATCDataPackUnpack.cpp  OpenATCDataPackUnpack.h  OpenATCGB20999DataPackUnpack.cpp  OpenATCGB20999DataPackUnpack.h  OpenATCITS300DataPackUnpack.cpp  OpenATCITS300DataPackUnpack.h  OpenATCMd5.cpp  OpenATCPackUnpackBase.h  OpenATCPackUnpackSimpleFactory.cpp  OpenATCPackUnpackSimpleFactory.h  OpenATCSocket.cpp  OpenATCSocket.h
OpenATCManager/logicctl/: CMakeLists.txt  LogicCtlAIOptim.cpp  LogicCtlAIOptim.h  LogicCtlActuate.cpp  LogicCtlActuate.h  LogicCtlActuateAdaptive.cpp  LogicCtlActuateAdaptive.h  LogicCtlActuatePedCrossStreet.cpp  LogicCtlActuatePedCrossStreet.h  LogicCtlAdaptiveGreenWave.cpp  LogicCtlAdaptiveGreenWave.h  LogicCtlAllRed.cpp  LogicCtlAllRed.h  LogicCtlCablelessLine.cpp  LogicCtlCablelessLine.h  LogicCtlChannelCheck.cpp  LogicCtlChannelCheck.h  LogicCtlFixedTime.cpp  LogicCtlFixedTime.h  LogicCtlInductiveGreenWave.cpp  LogicCtlInductiveGreenWave.h  LogicCtlLampOff.cpp  LogicCtlLampOff.h  LogicCtlManual.cpp  LogicCtlManual.h  LogicCtlMode.cpp  LogicCtlMode.h  LogicCtlModeSimpleFactory.cpp  LogicCtlModeSimpleFactory.h  LogicCtlOptim.cpp  LogicCtlOptim.h  LogicCtlPedCrossStreet.cpp  LogicCtlPedCrossStreet.h  LogicCtlPreempt.cpp  LogicCtlPreempt.h  LogicCtlWebsterOptim.cpp  LogicCtlWebsterOptim.h  LogicCtlYellowFlash.cpp  LogicCtlYellowFlash.h
build_msvc/LibVir/Lib/RelWithDebInfo/: CommonLog.lib  OpenATCGlobalStatus.lib  OpenATCTZParam.lib
build_msvc/LibWin/Lib/RelWithDebInfo/: OpenATCCanBusProc.lib  OpenATCFaultProc.lib  OpenATCGlobalStatus.lib  OpenATCMainCtlSource.lib  OpenATCTZParam.lib
src/: lib.rs  main.rs  types.rs
src/communication/: buffer.rs  can.rs  error.rs  filter.rs  mod.rs  priority.rs  types.rs
src/control/: algorithm.rs  error.rs  manager.rs  mod.rs  types.rs
src/coordination/: algorithm.rs  manager.rs  mod.rs  types.rs
src/fault/: error.rs  manager.rs  mod.rs  types.rs
src/hardware/: error.rs  manager.rs  mod.rs  monitor.rs  params.rs  status.rs  sync.rs  types.rs
src/hardware/tests/: can_test.rs  hardware_tests.rs  mock.rs  mod.rs
src/interface/: api.rs  mod.rs  remote.rs  types.rs  web.rs
src/monitor/: error.rs  manager.rs  mod.rs  types.rs
src/optimization/: algorithm.rs  estimator.rs  mod.rs  types.rs
src/storage/: error.rs  manager.rs  mod.rs  types.rs
tests/: communication_tests.rs  control_tests.rs  fault_tests.rs  hardware_tests.rs  mock_monitor.rs  system_test.rs
tests/common/: setup.rs
