[package]
name = "trae-atc"
version = "0.1.0"
edition = "2021"
authors = ["Peter Peng <sitexa@gmail.com>"]
description = "AI Traffic Control System"

[lib]
name = "traeatc"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "traeatc"
path = "src/main.rs"

[dependencies]
# 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
sysinfo = "0.29"
socketcan = { version = "1.7.0"}
chrono = "0.4.39"
axum = { version = "0.6", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors"] }
async-trait = "0.1.86"
